# RustCraft

./: .gitignore  Cargo.toml  bitmap_raw.txt  bitmap_visual.txt  package.json  texture_data.txt
.github/workflows/: main.yml  pages.yml
doc/.vitepress/: config.mts
doc/zh-CN/: index.md
src/: main.rs  pngconver.rs  render_loop.rs  shader.rs  shapevec.rs
src/gnworld/: blur.rs
src/input/: cursor_reset.rs  mod.rs  mouse_tracking.rs  move_action.rs  raycast.rs
src/pages/: declaration_page.rs  mod.rs  opengl_page.rs  start_screen.rs
src/render/: freetype.rs  text.rs
src/renderloop/: freetype.rs  init.rs  mod.rs  render.rs  struct.rs  structs.rs  text.rs  utils.rs
src/renderloop/shaders/: fbo_vertex.glsl  shader_fragment.glsl  shader_vertex.glsl  text_vertex.glsl
src/shader/: mod.rs
src/shader/gl/: fragment_shader.glsl  vertex_shader.glsl
src/shaders/: text_fragment.glsl  text_vertex.glsl
src/ui/: menu.rs  mod.rs  state.rs
src/utils/: gl_utils.rs  mod.rs  sdl_utils.rs
