[package]
name = "RustCraft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
freetype-rs = { version = "*", features = ["bundled"] }
gl = "*"

[dependencies.sdl2]
version = "*"
features = ["bundled", "ttf"]

[package.metadata.winres]
windows_subsystem = "windows"